# boss-stimuli-pipeline

./: .env.example  .gitignore  LICENSE  README.md  insert_boss.py  insert_bucket_supabase.py  main.py  optimize_images.py  pyproject.toml  select_stimuli.py  upload_to_supabase.py
input/: 2010_2014.xlsx
output/: boss_selecionadas_160.csv  boss_selecionadas_160.xlsx
