[project]
name = "boss-stimuli-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.1.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
